SonarQube plugin added